--- a/build.gradle
+++ b/build.gradle
@@ -29,22 +29,35 @@ minecraft {
     accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
     runs {
-        client = {
+        client {
             workingDirectory project.file('run')
             property 'forge.logging.console.level', 'debug'
 
             mods {
-                clienttweaks {
+                inventoryessentials {
                     source sourceSets.main
                 }
             }
         }
-        server = {
+        server {
             workingDirectory project.file('run')
             property 'forge.logging.console.level', 'debug'
 
             mods {
-                clienttweaks {
+                inventoryessentials {
+                    source sourceSets.main
+                }
+            }
+        }
+        data {
+            workingDirectory project.file('run')
+//            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+            property 'forge.logging.console.level', 'debug'
+
+            args '--mod', 'inventoryessentials', '--all', '--output', file('src/generated/resources/')
+
+            mods {
+                inventoryessentials {
                     source sourceSets.main
                 }
             }
@@ -60,12 +73,11 @@ dependencies {
     ])
 }
 
-// Example for how to get properties into the manifest for reading by the runtime..
 jar {
     manifest {
         attributes(["Specification-Title"     : mod_id,
                     "Specification-Vendor"    : "BlayTheNinth",
-                    "Specification-Version"   : "24.0", // We are version 1 of the modlauncher specification
+                    "Specification-Version"   : "1",
                     "Implementation-Title"    : project.name,
                     "Implementation-Version"  : "${version}",
                     "Implementation-Vendor"   : "BlayTheNinth",
