Fix dupe bug with ghost items, fix events being cancelled even if no item movement can occur

--- a/build.gradle
+++ b/build.gradle
@@ -65,12 +65,24 @@ minecraft {
     }
 }
 
+repositories {
+    flatDir {
+        dirs "run/obfmods"
+    }
+}
+
 dependencies {
     minecraft([
             group  : "${forge_group}",
             name   : "forge",
             version: "${minecraft_version}-${forge_version}"
     ])
+    def obfModsDir = new File("run/obfmods")
+    obfModsDir.eachFile { file ->
+        def parts = file.name.split('-', 2)
+        def dep = "ignored:" + parts[0] + ":" + parts[1].replace(".jar", "");
+        runtimeOnly fg.deobf(dep)
+    }
 }
 
 jar {
