--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader="javafml"
-loaderVersion="[37,)"
+loaderVersion="[38,)"
 license="All rights reserved"
 issueTrackerURL="https://github.com/ModdingForBlockheads/InventoryEssentials/issues"
 
@@ -12,24 +12,24 @@ logoFile="inventoryessentials-icon.png"
 credits="BlayTheNinth"
 authors="BlayTheNinth"
 description='''
-Basic inventory tweaks designed to supplement Inventory Sorter.
+Basic inventory tweaks. Lightweight and compatible.
 '''
 
 [[dependencies.inventoryessentials]]
     modId="forge"
     mandatory=true
-    versionRange="[37,)"
+    versionRange="[38,)"
     ordering="NONE"
     side="BOTH"
 [[dependencies.inventoryessentials]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.17.1,1.18)"
+    versionRange="[1.18,1.19)"
     ordering="NONE"
     side="BOTH"
 [[dependencies.inventoryessentials]]
     modId="balm"
     mandatory=true
-    versionRange="[1.7.0,)"
+    versionRange="[2.1.0,)"
     ordering="NONE"
     side="BOTH"
