--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -1,13 +1,13 @@
 buildscript {
     repositories {
         maven { url = 'https://maven.minecraftforge.net' }
-		maven { url = "https://repo.spongepowered.org/maven" }
+        maven { url = "https://repo.spongepowered.org/maven" }
         mavenCentral()
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
-		classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
-		classpath 'gradle.plugin.com.matthewprenger:CurseGradle:1.4.0'
+        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
+        classpath 'gradle.plugin.com.matthewprenger:CurseGradle:1.4.0'
     }
 }
 apply plugin: 'net.minecraftforge.gradle'
@@ -30,7 +30,9 @@ minecraft {
             ideaModule "${rootProject.name}.${project.name}.main"
             taskName "Client"
 
-			arg "-mixin.config=${mod_id}.mixins.json"
+            if (forge_mixins.toBoolean()) {
+                arg "-mixin.config=${mod_id}.mixins.json"
+            }
 
             property "mixin.env.disableRefMap", "true"
             property "mixin.debug.export", "true"
@@ -45,7 +47,7 @@ minecraft {
             mods {
                 "${mod_id}" {
                     source sourceSets.main
-					source project(":shared").sourceSets.main
+                    source project(":shared").sourceSets.main
                 }
             }
         }
@@ -55,7 +57,9 @@ minecraft {
             ideaModule "${rootProject.name}.${project.name}.main"
             taskName "Server"
 
-			arg "-mixin.config=${mod_id}.mixins.json"
+            if (forge_mixins.toBoolean()) {
+                arg "-mixin.config=${mod_id}.mixins.json"
+            }
 
             property "mixin.env.disableRefMap", "true"
             property "mixin.debug.export", "true"
@@ -70,7 +74,7 @@ minecraft {
             mods {
                 "${mod_id}" {
                     source sourceSets.main
-					source project(":shared").sourceSets.main
+                    source project(":shared").sourceSets.main
                 }
             }
         }
@@ -82,7 +86,9 @@ minecraft {
 
             property 'forge.logging.console.level', 'debug'
 
-			arg "-mixin.config=${mod_id}.mixins.json"
+            if (forge_mixins.toBoolean()) {
+                arg "-mixin.config=${mod_id}.mixins.json"
+            }
 
             property "mixin.env.disableRefMap", "true"
             property "mixin.debug.export", "true"
@@ -97,7 +103,7 @@ minecraft {
             mods {
                 "${mod_id}" {
                     source sourceSets.main
-					source project(":shared").sourceSets.main
+                    source project(":shared").sourceSets.main
                 }
             }
         }
@@ -105,18 +111,18 @@ minecraft {
 }
 
 sourceSets {
-	main {
+    main {
         resources {
             srcDirs 'src/generated/resources'
         }
-		ext.refMap = "${mod_id}.refmap.json"
-	}
+        ext.refMap = "${mod_id}.refmap.json"
+    }
 }
 
 dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
     annotationProcessor 'org.spongepowered:mixin:0.8.4:processor'
-	compileOnly project(":shared")
+    compileOnly project(":shared")
 
     implementation fg.deobf("net.blay09.mods:balm:${balm_forge_version}")
 
@@ -142,35 +148,35 @@ jar.finalizedBy('reobfJar')
 publishing {
     publications {
         mavenJava(MavenPublication) {
-			artifactId = mod_id + "-forge"
-			
+            artifactId = mod_id + "-forge"
+
             artifact jar
         }
     }
     repositories {
-		maven {
-			name = "GitHubPackages"
-			url = uri("https://maven.pkg.github.com/" + github_repo)
-			credentials {
-				username = project.findProperty("gpr.user") ?: System.getenv("GPR_USERNAME")
-				password = project.findProperty("gpr.key") ?: System.getenv("GPR_TOKEN")
-			}
-		}
-	}
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/" + github_repo)
+            credentials {
+                username = project.findProperty("gpr.user") ?: System.getenv("GPR_USERNAME")
+                password = project.findProperty("gpr.key") ?: System.getenv("GPR_TOKEN")
+            }
+        }
+    }
 }
 
 curseforge {
-	apiKey = project.findProperty("curseforge.api_key") ?: System.getenv("CF_API_KEY") ?: "none"
-	project {
-		id = curseforge_forge_project_id
-		releaseType = curseforge_release_type
-		changelogType = 'markdown'
-		changelog = file('../changelog.md')
-		addGameVersion minecraft_version
-		addGameVersion 'Forge'
+    apiKey = project.findProperty("curseforge.api_key") ?: System.getenv("CF_API_KEY") ?: "none"
+    project {
+        id = curseforge_forge_project_id
+        releaseType = curseforge_release_type
+        changelogType = 'markdown'
+        changelog = file('../changelog.md')
+        addGameVersion minecraft_version
+        addGameVersion 'Forge'
 
-		relations {
-			requiredLibrary 'balm'
-		}
-	}
+        relations {
+            requiredLibrary 'balm'
+        }
+    }
 }
