--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Mod
-mod_version = 4.0.2
+mod_version = 5.0.0
 mod_id = inventoryessentials
 mod_group = net.blay09.mods
 
@@ -7,23 +7,26 @@ mod_group = net.blay09.mods
 curseforge_release_type = release
 curseforge_forge_project_id = 368825
 curseforge_fabric_project_id = 547699
+modrinth_release_type = release
+modrinth_forge_project_id = Boon8xwi
+modrinth_fabric_project_id = Boon8xwi
 github_repo = ModdingForBlockheads/InventoryEssentials
 
 # Minecraft
-minecraft_version = 1.18.2
+minecraft_version = 1.19
 java_version = 17
 
 # Balm
-balm_forge_version = 3.0.0+235
-balm_fabric_version = 3.0.0+256
+balm_forge_version = 4.0.0+254
+balm_fabric_version = 4.0.0+276
 
 # Forge
-forge_version = 40.0.12
+forge_version = 41.0.22
 forge_mixins = false
 
 # Fabric
-fabric_version = 0.47.10+1.18.2
-fabric_loader_version = 0.13.3
+fabric_version = 0.56.0+1.19
+fabric_loader_version = 0.14.7
 
 # Gradle
 org.gradle.jvmargs=-Xmx3G
