fix: Fix shift clicking in creative screen resulting in weird behaviour when the mouse is dragged #7

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,7 +22,7 @@ balm_fabric_version = 4.5.3+1.19.2
 
 # Forge
 forge_version = 41.0.22
-forge_mixins = false
+forge_mixins = true
 
 # Fabric
 fabric_version = 0.56.0+1.19
