fix: Fix shift clicking in creative screen resulting in weird behaviour when the mouse is dragged #7

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ balm_version = 5.1.0-SNAPSHOT
 
 # Forge
 forge_version = 44.0.18
-forge_mixins = false
+forge_mixins = true
 
 # Fabric
 fabric_version = 0.69.1+1.19.3
