feat: Restructure and add NeoForge

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,27 @@
 # Mod
-mod_version = 9.0.0
 mod_id = inventoryessentials
-mod_group = net.blay09.mods
+mod_name=Inventory Essentials
+mod_main=InventoryEssentials
+description=Basic inventory tweaks. Lightweight and compatible.
+version = 9.0.0
+group = net.blay09.mods
+homepage=https://mods.twelveiterations.com/mc/inventory-essentials
+sources=https://github.com/TwelveIterationMods/InventoryEssentials
+issues=https://github.com/TwelveIterationMods/InventoryEssentials/issues
+license=All Rights Reserved
 
 # Publishing
 curseforge_release_type = release
 curseforge_forge_project_id = 368825
 curseforge_fabric_project_id = 547699
 modrinth_release_type = release
-modrinth_forge_project_id = Boon8xwi
-modrinth_fabric_project_id = Boon8xwi
+modrinth_project_id = Boon8xwi
 
 # Minecraft
 minecraft_version = 1.20.2
 minecraft_versions = 1.20.2
 minecraft_version_range=[1.20.2,1.21)
+pack_format_number=18
 java_version = 17
 
 # Balm
@@ -31,17 +38,14 @@ forge_mixins=true
 fabric_version = 0.89.0+1.20.2
 fabric_loader_version = 0.14.22
 
+# NeoForge
+neoforge_version = 20.2.86
+neoforge_version_range=[20.2,)
+neoforge_loader_version_range=[1,)
+
 # Dependencies
-jei_minecraft_version=1.19.2
-jei_version=11.4.0.288
-rei_version=10.0.581
-wthit_version=6.1.1
-jade_fabric_version=4160727
-jade_forge_version=4159759
 mixin_version=0.8.5
-modmenu_version=4159524
-theoneprobe_version=4159743
-cloth_config_version=9.0.94
+modmenu_version=8.0.0
 
 # Gradle
 org.gradle.jvmargs=-Xmx3G
